Furnace JARs are now dynamic